--- a/.gitignore
+++ b/.gitignore
@@ -62,6 +62,17 @@ tmp/
 *.tmp
 *.temp
 
+# 데이터/대용량 파일 (브랜치 전략에 따른 추가 규칙)
+src/data/**
+!.gitkeep
 
+# vector caches
+*.duckdb
+*.sqlite
 
+# chroma
+src/data/indexes/**
 
+# 백업 파일
+backups/
+*.backup
