feat: 릴리스 전 마지막 폴리싱 완료
- sys.path 직접 조작 제거
- /health의 hit_rate 실제값 계산 반영
- /stats에 검색/생성 카운터 누적
- 임베딩 배치 사이즈/모델명을 ENV로 노출
- 헬스 degraded 판단 로직을 HTTP 503 옵션으로 노출
- .gitignore가 캐시/인덱스/데이터를 확실히 제외
- uptime 초기화 개선
- /stats 카운터 신뢰성 개선
- 캐시 hit_rate 산식 문서화

프로덕션 릴리스 준비 100% 완료

--- a/.gitignore
+++ b/.gitignore
@@ -69,10 +69,19 @@ src/data/**
 # vector caches
 *.duckdb
 *.sqlite
+data/embedding_cache.db
+data/*.db
 
 # chroma
 src/data/indexes/**
+chroma/
+**/chroma/
 
 # 백업 파일
 backups/
 *.backup
+
+# 운영 데이터
+data/samples/
+data/processed/
+data/meta/
